--- a/code/SleepAPP/AndroidManifest.xml
+++ b/code/SleepAPP/AndroidManifest.xml
@@ -11,14 +11,19 @@
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:name=".SleepAPPActivity" >
+            android:name=".MainActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+	    <activity android:name=".SleepAPPActivity"></activity>
 	    <activity android:name=".ResultActivity"></activity>
     </application>
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- 在SDCard中创建与删除文件权限 --> 
+	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/> 
+	<!-- 往SDCard写入数据权限 --> 
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest>
